<resources>
    <string name="app_name">NoteApp</string>
    <string name="choose_a_font">Choose a Font</string>
    <string name="font_name">Font Name</string>
    <string name="note_title">Note Title</string>
    <string name="note_content">Note Content</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search Notes</string>
    <string name="favorite">Favorite</string>
    <string name="alarm">Alarm</string>
    <string name="lock">Lock</string>
    <string name="unlock">Unlock</string>
    <string name="there_are_currently_no_notes">There are currently no Notes</string>
    <string name="title">Title</string>
    <string name="content">Content</string>
    <string name="delete">Delete</string>
    <string name="select_all">Select All</string>
    <string name="access_authentication">Access Authentication</string>
    <string name="scan_fingerprint">Scan your fingerprint</string>
    <string name="note_deleted">The Note Was Deleted</string>
    <string name="undo">Undo</string>
    <string name="warning">Warning</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="done">Done</string>
    <string name="successful">Successful</string>
    <string name="invalid_date">Selected Date and Time is invalid .</string>
    <string name="set_alarm">Alarm successfully set on %1$s .</string>
    <string name="cancel_alarm">Alarm already set on %1$s , Do you want to cancel it?</string>
    <string name="cant_add_empty_note">Can\'t add note with empty content or title .</string>
    <string name="create_note_first">You should create a note at first .</string>
    <string name="save_note_first">You should save the note first .</string>
    <string name="cant_share_empty_note">Can\'t share a note with empty content or title .</string>
    <string name="send_copy_to">Send A Copy To …</string>
    <string name="want_unlock_note">Do you want to unlock the note?</string>
    <string name="want_delete_all_notes">All selected notes will be deleted , Are you sure?</string>
    <string name="all_locked">All selected notes are currently locked .</string>
    <string name="all_unlocked">All selected notes are currently unlocked .</string>
    <string name="want_lock_notes">All selected notes that are not locked will be locked , Are you sure?</string>
    <string name="want_unlock_selected_notes">All selected notes that are locked will be unlocked , Are you sure?</string>
    <string name="selected">Selected %1$s</string>
    <string name="unsaved_changes">Any unsaved changes will be lost , Are you sure?</string>
    <string name="want_close_app">Are you sure you want to close the app?</string>
    <string name="want_delete_note">Are you sure you want to delete the note?</string>
    <string name="no_password_already_set">This cannot be done because there is no password on your phone , you need to set a password on your phone first .</string>
    <string name="font">Font %1$s</string>
</resources>