<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menuDeleteNote"
        android:icon="@drawable/delete"
        android:title="@string/delete"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuSelectAllNote"
        android:icon="@drawable/select_all"
        android:title="@string/select_all"
        app:showAsAction="always" />
    <item
        android:id="@+id/menuLockNote"
        android:icon="@drawable/lock"
        android:title="@string/lock"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/menuUnlockNote"
        android:icon="@drawable/font"
        android:title="@string/unlock"
        app:showAsAction="ifRoom" />
</menu>