<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/noteHomeFragmentParent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/app_background"
        tools:context=".fragments.NoteHomeFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/app_toolbar"
            app:liftOnScroll="true">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetEnd="0dp"
                app:contentInsetLeft="0dp"
                app:contentInsetRight="0dp"
                app:contentInsetStart="0dp"
                app:layout_scrollFlags="scroll|enterAlways">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="15dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal"
                            android:padding="2dp">

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:gravity="center_vertical"
                                android:src="@drawable/outline_note_alt_24"
                                app:tint="@color/black" />

                            <com.google.android.material.textview.MaterialTextView
                                android:id="@+id/homePageTitle"
                                android:layout_width="wrap_content"
                                android:layout_height="match_parent"
                                android:layout_marginStart="10dp"
                                android:gravity="center_vertical"
                                android:text="@string/my_notes"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                        </LinearLayout>

                        <RelativeLayout
                            android:id="@+id/searchView"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <RelativeLayout
                                android:id="@+id/close_search_bar_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <ImageButton
                                    android:id="@+id/search_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:layout_alignParentEnd="true"
                                    android:layout_centerVertical="true"
                                    android:background="@drawable/search_bar_bg"
                                    android:foreground="?attr/selectableItemBackgroundBorderless"
                                    android:src="@drawable/ic_search" />


                            </RelativeLayout>

                            <RelativeLayout
                                android:id="@+id/open_search_bar_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:background="@drawable/search_bar_bg"
                                android:visibility="invisible">

                                <ImageButton
                                    android:id="@+id/close_search_button"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:layout_alignParentStart="true"
                                    android:layout_centerVertical="true"
                                    android:background="@android:color/transparent"
                                    android:src="@drawable/ic_baseline_close_24" />

                                <EditText
                                    android:id="@+id/searchBarEditText"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_toEndOf="@id/close_search_button"
                                    android:background="@null"
                                    android:hint="@string/search_notes"
                                    android:imeOptions="actionSearch"
                                    android:importantForAutofill="no"
                                    android:inputType="textFilter"
                                    android:paddingStart="5dp" />


                            </RelativeLayout>

                        </RelativeLayout>

                    </LinearLayout>

                </LinearLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.AppBarLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="10dp"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <HorizontalScrollView
                android:id="@+id/chipLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/home_toolbar"
                android:scrollbars="none">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/favorite_filter"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:checked="false"
                        android:text="@string/favorite"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:chipBackgroundColor="@color/app_grey"
                        app:chipIcon="@drawable/ic_favorite_enable"
                        app:chipIconSize="22sp"
                        app:chipIconTint="@color/app_yellow"
                        app:chipIconVisible="true"
                        app:iconStartPadding="12dp"
                        app:textEndPadding="12dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/alarm_filter"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/alarm"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:chipBackgroundColor="@color/app_grey"
                        app:chipIcon="@drawable/ic_alarm_on"
                        app:chipIconSize="24sp"
                        app:chipIconTint="@color/app_red"
                        app:chipIconVisible="true"
                        app:iconStartPadding="12dp"
                        app:textEndPadding="12dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/locked_filter"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="false"
                        android:text="@string/lock"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:chipBackgroundColor="@color/app_grey"
                        app:chipIcon="@drawable/baseline_lock_24"
                        app:chipIconSize="22sp"
                        app:chipIconTint="@color/lock_unlock_icon"
                        app:chipIconVisible="true"
                        app:iconStartPadding="12dp"
                        app:textEndPadding="12dp" />

                    <com.google.android.material.chip.Chip
                        android:id="@+id/unlocked_filter"
                        style="@style/Widget.MaterialComponents.Chip.Choice"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:checked="false"
                        android:text="@string/unlock"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        app:chipBackgroundColor="@color/app_grey"
                        app:chipIcon="@drawable/baseline_unlock_24"
                        app:chipIconSize="22sp"
                        app:chipIconTint="@color/lock_unlock_icon"
                        app:chipIconVisible="true"
                        app:iconStartPadding="12dp"
                        app:textEndPadding="12dp" />


                </com.google.android.material.chip.ChipGroup>

            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/notesRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@id/chipLayout"
                android:layout_marginStart="15dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="15dp"
                android:clipToPadding="false"
                android:transitionGroup="true"
                tools:listitem="@layout/note_list_item" />

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/noDataFoundLayout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="invisible">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_box"
                app:tint="@color/app_red" />

            <TextView
                android:id="@+id/notFoundNotesText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/there_are_currently_no_notes"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>


        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addNoteFloatingActButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_marginBottom="20dp"
            android:src="@drawable/baseline_draw_24"
            app:backgroundTint="#f9c80e"
            app:borderWidth="0dp"
            app:fabSize="normal"
            app:useCompatPadding="false" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>